syntax = "proto3";

option go_package = "berty.tech/go/internal/group";

message MemberEntryEnvelope {
  bytes encrypted_member_payload = 1;
  bytes member_payload_signature = 2; // Signed by member_device_priv_key
}

message MemberEntryPayload {
  bytes member_pub_key = 1;
  bytes member_pub_key_signature = 2; // Signed by invitation_priv_key
  bytes member_device_pub_key = 3;
  bytes member_device_pub_key_signature = 4; // Signed by member_priv_key

  bytes inviter_member_pub_key = 5;
  bytes invitation_pub_key = 6;
  bytes invitation_pub_key_signature = 7; // Signed by inviter_member_priv_key
}
